# PaddleCppAPITest

./: .gitignore  CMakeLists.txt  README.md
.claude/skills/compatibility-testing/: SKILL.md
cmake/: build.cmake  external.cmake
doc/: allocator.md  cuda_blas.md  cuda_context_light.md  cuda_stream.md  dispatch_key_set.md  generator.md  intrusive_ptr.md  mismatch_api_record.md  op_math_type.md  philox.md  storage.md  storage_compat_arch.md  stream.md  stream_compat_arch.md  tensor_base.md  tensor_body.md  type_meta.md
doc/c10/core/: mismatch_api_record.md  stream_compat_arch.md
doc/c10/cuda/: cuda_stream.md  mismatch_api_record.md
src/: file_manager.h
test/: AccumulateTypeTest.cpp  AllocatorCompatTest.cpp  ArrayRefTest.cpp  CUDAContextTest.cpp  CUDADataTypeTest.cpp  CUDATest2.cpp  DefaultDtypeTest.cpp  DeviceGuardTest.cpp  DeviceTest.cpp  EmptyOpsTest.cpp  ExceptionTest.cpp  GeneratorTest.cpp  HalfBFloat16Test.cpp  IValueTest.cpp  IndexingTest.cpp  LayoutMemoryFormatTest.cpp  LayoutTest.cpp  LibraryTest.cpp  ListTest.cpp  OptionalArrayRefTest.cpp  PythonCompatTest.cpp  RangeUtilsTest.cpp  RecordStreamTest.cpp  ScalarTest.cpp  ScalarTypeFunctionsTest.cpp  ScalarTypeTest.cpp  StorageTest.cpp  TensorAccessorTest.cpp  TensorOptionsTest.cpp  TensorTest.cpp  TensorTest_compare.cpp  TensorUtilTest.cpp  TorchCudaTest.cpp  result_cmp.sh  unmatch_AllocatorTest.cpp  unmatch_CUDAContextTest.cpp  unmatch_EventTest.cpp  unmatch_IValueTest.cpp  unmatch_LibraryTest.cpp  unmatch_PythonTest.cpp  (+2 more)
test/ops/: AbsTest.cpp  AllAndAllCloseTest.cpp  ArangeTest.cpp  CUDABlasTest.cpp  CoalesceTest.cpp  ConnectionOpsTest.cpp  CreationOpsTest.cpp  DetachTest.cpp  EmptyStridedTest.cpp  EqualTest.cpp  EyeTest.cpp  FlattenTest.cpp  FromBlobTest.cpp  IndexPutTest.cpp  IndexTest.cpp  ItemTest.cpp  MiscTensorTest.cpp  NarrowTest.cpp  PermuteTest.cpp  ReciprocalTest.cpp  ReshapeTest.cpp  SelectTest.cpp  SliceTest.cpp  SparseTensorExtraTest.cpp  SparseTensorTest.cpp  SplitTest.cpp  SqueezeTest.cpp  StdTest.cpp  SumTest.cpp  TTest.cpp  TViewAsTest.cpp  TensorFactoryTest.cpp  TensorPtrTest.cpp  ToTest.cpp  TransposeTest.cpp  UnsqueezeTest.cpp  ViewAsTest.cpp  ViewTest.cpp
